deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: enterprisecore
  labels:
    app.kubernetes.io/name: enterprisecore
