deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enterprisecore-backend
  labels:
    app.kubernetes.io/name: enterprisecore
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  ports:
    - port: 8765
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: enterprisecore
    app.kubernetes.io/component: backend
---
apiVersion: v1
kind: Service
metadata:
  name: enterprisecore-frontend
  labels:
    app.kubernetes.io/name: enterprisecore
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: enterprisecore
    app.kubernetes.io/component: frontend
